--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,25 @@ body,
     height: 100%;
     margin: 0;
 }
+
+.flex-container {
+    display: flex;
+    width: 700px;
+    height: 300px;
+    justify-content: space-between;
+}
+
+.flex-container div {
+    background-color: #daa520;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.flex-container div:nth-child(2),
+.flex-container div:nth-child(4) {
+    margin: auto;
+}
+.flex-container div:nth-child(3) {
+    margin-top: auto;
+}
